[package]
name = "aoc"
version = "0.6.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = "0.10.5"
hashbrown = "0.13.1"
regex = "1.7.0"
bit-set = "0.5.3"
bit-vec = "0.6.3"
parse-display = "0.7"
anyhow = "1.0.66"
